urls to point to correct repos and sites

--- a/src/components/participants.astro
+++ b/src/components/participants.astro
@@ -17,7 +17,7 @@ const allParticipants = await getCollection("participants");
     </ul>
   </div>
   <p>
-    To be added to this list please submit a PR to <a href="">this repo</a> with
+    To be added to this list please submit a PR to <a href="https://github.com/scottishtechnologyclub/edinburghjs-codejam-2023-astro-personalsites">this repo</a> with
     your details.
   </p>
 </div>
