--- a/src/components/challenges.astro
+++ b/src/components/challenges.astro
@@ -1,7 +1,7 @@
 <div class="prose my-6">
   <h2 id="challenges">Challenges</h2>
 
-  <p>The first challenge is to deploy and Astro template with your name and a "hello world" message, then to submit a PR to <a href="https://github.com/scottish-technology-club/">this websites repository</a> to list your work.</p>
+  <p>The first challenge is to deploy and Astro template with your name and a "hello world" message, then to submit a PR to <a href="https://github.com/scottishtechnologyclub/edinburghjs-codejam-2023-astro-personalsites">this repository</a> to list your work.</p>
 
   <p>Then try:</p>
 
