add celebration confetti

--- a/src/components/challenges.astro
+++ b/src/components/challenges.astro
@@ -20,6 +20,7 @@
     <li><a href="https://luigicruz.dev/blog/using-spotify-api">Displaying your top songs using the Spotify API</a></li>
     <li>Create page transitions using the <a href="https://www.maxiferreira.com/blog/astro-page-transitions/">Shared Element Transition API</a></li>
     <li>Filter out <a href="https://akashrajpurohit.com/blog/set-up-draft-pages-effectively-in-astro-with-configdriven-content-authoring/">draft pages</a> on your blog</li>
+    <li>Add <a href="https://docs.astro.build/en/guides/client-side-scripts/#client-side-scripts">celebration confetti</a> to a page</li>
   </ul>
 
 </div>
