Add Vercel Netlify

--- a/src/components/schedule.astro
+++ b/src/components/schedule.astro
@@ -8,7 +8,7 @@
   <ul>
     <li>09:30 - Doors open</li>
     <li>Get connected to Wifi, settle in</li>
-    <li><a href="https://docs.astro.build/en/install/auto/" class="text-blue-800 underline">Install Astro</a>, publish a "Hello World" site, Pull Request a link to your site on <em>this site (below!)</em></li>
+    <li><a href="https://docs.astro.build/en/install/auto/" class="text-blue-800 underline">Install Astro</a>, publish a "Hello World" site (try Vercel or Netlify for hosting!), Pull Request a link to your site on <em>this site (below!)</em></li>
     <li>Get coding on the challenges</li>
     <li>12:30 - Lunch (Union of Genius soup, sponsored by Gigged.ai)</li>
     <li>15:00 - Wrap up coding, finishing touches</li>
