Add second link

--- a/src/components/challenges.astro
+++ b/src/components/challenges.astro
@@ -3,6 +3,8 @@
 
   <p>The first challenge is to deploy and Astro template with your name and a "hello world" message, then to submit a PR to <a href="https://github.com/scottishtechnologyclub/edinburghjs-codejam-2023-astro-personalsites">this repository</a> to list your work.</p>
 
+  <p>Try hosting with <a href="https://vercel.com/docs/frameworks/astro">Vercel</a> or Netlify</p>
+
   <p>Then try:</p>
 
   <ul>
